Add minor fixes to Tableau page

--- a/tableau.html
+++ b/tableau.html
@@ -74,7 +74,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <main class="hoc container clear">
       <!-- main body -->
       <div class="sectiontitle">
-        <h6 class="heading">Soluções para o Desafio</h6>
+        <h1 class="heading"><b>Soluções para o Desafio</b></h1>
       </div>
       <section id="introblocks">
         <h3>Primeira abordagem</h3>
@@ -101,28 +101,29 @@ Licence URI: https://www.os-templates.com/template-terms
         <h3>Segunda abordagem</h3>
         <br>
         <p>A segunda abordagem escolhida foi a de utilizar os esquemas com ambiguidade em português brasileiro em um
-          <b>modelo pré-treinado somente em português ou multilingual.</b> Para esta abordagem, <b>BERT-Base Multilingual</b> 
-          é um modelo pré-treinado em algumas línguas inclusive o português brasileiro, <b>BERT-Large Português</b> é um modelo pré-treinado
-           somente em português e o <b>BERT-Base Multilingual Winogrande</b> é um modelo também pré-treinado em português mas com 
-           ajuste fino no dataset Winogrande.</p>
+          <b>modelo pré-treinado em português ou multi-idiomas.</b> Para esta abordagem, <b>BERT-Base Multilingual</b> 
+          é um modelo pré-treinado em múltiplas línguas incluindo o português brasileiro, <b>BERT-Large Português</b> é um modelo pré-treinado
+           em português e o <b>BERT-Base Multilingual Winogrande Traduzido</b> é um modelo também pré-treinado em português mas com 
+           ajuste fino no dataset Winogrande traduzido para português.</p>
         <ul class="nospace group">
           <li class="s_abordagem">
             <article>
               <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual</a></h3>
+              <br>
               <h5><b>58,6%</b></h5>
             </article>
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Large Português </a></h3>
+              <h3 class="heading font-x1"><a href="#">BERT-Large <br> Português </a></h3>
               <br>
               <h5><b>55,4%</b></h5>
             </article>
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Base Mult. Winogrande traduzido</a></h3>
-              <h5><b>65,26%</b></h5>
+              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual Winogrande traduzido</a></h3>
+              <h5><b>65,3%</b></h5>
             </article>
           </li>
         </ul>
@@ -240,10 +241,10 @@ Licence URI: https://www.os-templates.com/template-terms
           <li ><i class="fa fa-envelope-o"></i>thabata.risso@usp.br   |   guilherme.vecchi@usp.br</li>
         </ul>
         <ul class="faico clear">
-          <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
-          <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" title="Repositório do website"><i class="fa fa-github"></i></a></li>
-          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
-          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" title="Guilherme's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/tcc_project" target="_blank" title="Repositório do projeto"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-facebook" href="https://github.com/thaapontes/thaapontes.github.io" target="_blank" title="Repositório do website"><i class="fa fa-github"></i></a></li>
+          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/thabata-pontes/" target="_blank" title="Thábata's Linkedin"><i class="fa fa-linkedin"></i></a></li>
+          <li><a class="faicon-linkedin" href="https://www.linkedin.com/in/guilherme-vecchi/" target="_blank" title="Guilherme's Linkedin"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
       <!--
