--- a/tableau.html
+++ b/tableau.html
@@ -104,7 +104,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <b>modelo pré-treinado em português ou multi-idiomas.</b> Para esta abordagem, <b>BERT-Base Multilingual</b> 
           é um modelo pré-treinado em múltiplas línguas incluindo o português brasileiro, <b>BERT-Large Português</b> é um modelo pré-treinado
            em português e o <b>BERT-Base Multilingual Winogrande Traduzido</b> é um modelo também pré-treinado em português mas com 
-           ajuste fino no dataset Winogrande traduzido para português.</p>
+           ajuste fino no dataset <b>Winogrande traduzido para português</b>.</p>
         <ul class="nospace group">
           <li class="s_abordagem">
             <article>
@@ -122,7 +122,7 @@ Licence URI: https://www.os-templates.com/template-terms
           </li>
           <li class="s_abordagem">
             <article>
-              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual Winogrande traduzido</a></h3>
+              <h3 class="heading font-x1"><a href="#">BERT-Base Multilingual Winogrande</a></h3>
               <h5><b>65,3%</b></h5>
             </article>
           </li>
